Update Tagalog translations

--- a/util/src/main/i18n/translations/death_tl_PH.properties
+++ b/util/src/main/i18n/translations/death_tl_PH.properties
@@ -16,10 +16,6 @@
 # {0} = victim player name
 
 # {0} = victim player name
-
-# {0} = victim player name
-
-# {0} = victim player name
 # {2} = block name (e.g. "Dispenser")
 
 # {0} = victim player name
@@ -82,6 +78,16 @@
 # {0} = victim player name
 # {1} = killer player name
 # {2} = entity name (e.g. "Anvil")
+
+# {0} = victim player name
+
+# {0} = victim player name
+# {1} = killer player name
+
+# {0} = victim player name
+
+# {0} = victim player name
+# {1} = killer player name
 
 # {0} = victim player name
 # {1} = killer player name
@@ -508,4 +514,10 @@
 # {0} = number of seconds (e.g. "1.23" or "1")
 
 # {0} = number of seconds (e.g. "1.23" or "1")
+
+
+
+# {0} = A player name
+
+
 
