--- a/util/src/main/i18n/translations/match_es_CL.properties
+++ b/util/src/main/i18n/translations/match_es_CL.properties
@@ -61,6 +61,7 @@ match.stats.concise = Kills\: {0}  Muertes\: {1}  K/D\: {2}
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Tus stats\: {0} Kills ({1}), {2} Muertes, {3} K/D, {4} Daño
 
 # {0} = a player name
 # {1} = an amount of kills(number)
