--- a/util/src/main/i18n/translations/match_en_GB.properties
+++ b/util/src/main/i18n/translations/match_en_GB.properties
@@ -61,6 +61,7 @@ match.stats.concise = Kills\: {0}  Deaths\: {1}  K/D\: {2}
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Your stats\: {0} Kills ({1}), {2} Deaths, {3} K/D, {4} Damage
 
 # {0} = a player name
 # {1} = an amount of kills(number)
