Update LOLCAT translations

--- a/util/src/main/i18n/translations/match_lol_US.properties
+++ b/util/src/main/i18n/translations/match_lol_US.properties
@@ -61,6 +61,7 @@ match.stats.concise = kilzz\: {0} ded\: {1} KAT/D\: {2}
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Catistics\: {0} Killz ({1}), {2} dedz, {3} Kilzz/Deds, {4} scratchs
 
 # {0} = a player name
 # {1} = an amount of kills(number)
