--- a/util/src/main/i18n/translations/match_ru_RU.properties
+++ b/util/src/main/i18n/translations/match_ru_RU.properties
@@ -61,6 +61,7 @@ match.stats.concise = Убийств\: {0} Смертей\: {1} У/С\: {2}
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Ваша статистика\: {0} убийств ({1}), {2} смертей, {3} У/С, {4} урона нанесено
 
 # {0} = a player name
 # {1} = an amount of kills(number)
@@ -176,7 +177,7 @@ broadcast.gameOver.teamWinners = {0} победил\!
 countdown.matchStart = Матч начнётся через {0}
 
 # {0} = duration
-countdown.huddleEnd = Фаза планирования закончится через {0}
+countdown.huddleEnd = Планирование закончится через {0}
 
 # {0} = duration
 countdown.restart = Перезапуск сервера через {0}
