--- a/util/src/main/i18n/translations/match_sv_SE.properties
+++ b/util/src/main/i18n/translations/match_sv_SE.properties
@@ -61,6 +61,7 @@ match.stats.concise = Dödat\: {0}  Dött\: {1}  K/D\: {2}
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Din statistik\: {0} Dödade ({1}), {2} Dött, {3} K/D, {4} Skada
 
 # {0} = a player name
 # {1} = an amount of kills(number)
