--- a/util/src/main/i18n/translations/match_fr_FR.properties
+++ b/util/src/main/i18n/translations/match_fr_FR.properties
@@ -12,7 +12,9 @@ match.info.players = Joueurs
 
 match.info.observers = Observateurs
 
+match.info.score = Score
 
+match.info.you = Vous
 # {0} = team name
 match.balanceTeams = Les équipes seront auto-équilibrées si la répartition des joueurs reste disproportionnée en faveur de l''équipe {0}
 
@@ -52,12 +54,14 @@ match.stats = Kills \: {0}  | Killstreak \: {1}  | Morts \: {2}  | K/D \: {3}
 # {0} = number of kills
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats.concise = Kills\: {0} Morts\: {1} K/D\: {2}
 
 # {0} = number of kills
 # {1} = number of consecutive kills
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Vos stats\: {0} Kills ({1}), {2} Morts, {3} K/D, {4} Dégâts
 
 # {0} = a player name
 # {1} = an amount of kills(number)
@@ -68,6 +72,7 @@ match.stats.kills = Kills \: {1} par {0}
 match.stats.killstreak = Killstreak \: {1} par {0}
 
 # {0} = a killstreak(number)
+match.stats.killstreak.concise = Meilleure killstreak\: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
@@ -79,25 +84,34 @@ match.stats.bowshot = Plus long tir \: {1} blocs par {0}
 
 # {0} = a player name
 # {1} = an amount of damage
+match.stats.damage = Dégâts\: {1} par {0}
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.dealt = Dégâts infligés (Arc)\: {0} ({1})
 
 # {0} = an amount of damage
+match.stats.damage.received = Dégâts reçus\: {0}
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
 # {2} = accuracy represented as a percentage
+match.stats.bow = Touchés à l''Arc\: {0} / {1} ({2})
 
 
 # {0} = the number of flags captured
+match.stats.flagsCaptured.concise = Drapeaux capturés \: {0}
 
 # {0} = a number representing the duration of the capture
+match.stats.flaghold.concise = Plus long maintien du Drapeau \: {0}
 
 # {0} the amount of monument pieces broken(number)
+match.stats.broken.concise = Blocs de monument détruits \: {0}
 
 # {0} = a player name
+match.stats.team = Stats de {0}
 
+match.stats.title = Stats du Match
 
 match.stats.you = Vos Stats
 
