Update German translations

--- a/util/src/main/i18n/translations/match_de_DE.properties
+++ b/util/src/main/i18n/translations/match_de_DE.properties
@@ -16,7 +16,6 @@ match.info.score = Punktestand
 
 match.info.you = Du
 # {0} = team name
-match.balanceTeams = Die Teams werden automatisch ausgeglichen, falls {0} unverhältnismäßig gefüllt bleiben sollte
 
 match.maxBuildHeight = Du hast die maximale Bauhöhe erreicht
 
@@ -121,13 +120,13 @@ match.myTeam = Du bist in {0}
 
 match.notOnTeam = Du bist in keinem Team.
 
-match.shuffle.ok = Teams wurden erfolgreich gemischt.
+match.shuffle.ok = Die Teams wurden erfolgreich gemischt.
 
 match.shuffle.err = Du kannst die Teams während eines Spiels nicht mischen.
 
 # {0} = old team name (e.g. "Blue Team")
 # {1} = new team name (e.g. "Cool Team")
-match.alias.ok = {0} wurde erfolgreich zu {1} unbenannt
+match.alias.ok = {0} wurde erfolgreich zu {1} umbenannt
 
 # {0} = team name (e.g. "Red Team")
 match.alias.err = Ein Team mit dem Namen {0} existiert bereits.
@@ -149,7 +148,7 @@ match.timeLimit.result = {1} nach {0}
 
 # {0} = duration in colon format
 # {1} = some criteria to win the match
-match.timeLimit.commandOutput = Die Zeitbeschränkung ist {0} mit dem Ergebnis {1}
+match.timeLimit.commandOutput = Das Zeit-Limit ist {0} mit dem Ergebnis {1}
 
 broadcast.go = Los\!
 
@@ -176,7 +175,7 @@ broadcast.gameOver.teamWinners = {0} gewinnen\!
 countdown.matchStart = Das Spiel beginnt in {0}
 
 # {0} = duration
-countdown.huddleEnd = Team-Vorbereitungszeit endet in {0}
+countdown.huddleEnd = Die Team-Vorbereitungszeit endet in {0}
 
 # {0} = duration
 countdown.restart = Der Server startet neu in {0}
