--- a/util/src/main/i18n/translations/match_it_IT.properties
+++ b/util/src/main/i18n/translations/match_it_IT.properties
@@ -61,6 +61,7 @@ match.stats.concise = Uccisioni\: {0}  Morti\: {1}  K/D\: {2}
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Le tue statistiche\: {0} Uccisioni ({1}), {2} Morti, {3} K/D, {4} Danno
 
 # {0} = a player name
 # {1} = an amount of kills(number)
