--- a/util/src/main/i18n/translations/match_ko_KR.properties
+++ b/util/src/main/i18n/translations/match_ko_KR.properties
@@ -61,6 +61,7 @@ match.stats.concise = 킬\: {0} 데스\: {1} 킬뎃 비율\: {2}
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = 전적\: {0}킬 ({1}), {2}데스, {3} K/D, {4} 피해량
 
 # {0} = a player name
 # {1} = an amount of kills(number)
