Update Dutch translations

--- a/util/src/main/i18n/translations/match_nl_NL.properties
+++ b/util/src/main/i18n/translations/match_nl_NL.properties
@@ -1,6 +1,8 @@
 match.title = Wedstrijd
 
+match.name = wedstrijd
 
+match.name.plural = wedstrijden
 
 match.info.time = Lengte van de wedstrijd
 
@@ -10,16 +12,21 @@ match.info.players = Spelers
 
 match.info.observers = Toeschouwers
 
+match.info.score = Score
 
+match.info.you = Jij
 # {0} = team name
 match.balanceTeams = Er zitten naar verhouding te veel spelers in {0}. Als dat zo blijft, worden een paar spelers automatisch in een ander team geplaatst
 
+match.maxBuildHeight = Je hebt de maximum bouwhoogte bereikt
 
 match.outOfBounds = Je mag het speelveld niet verlaten
 
 match.laneExit = Je hebt je eigen deel van het speelveld verlaten
 
+match.disabled.enderChest = Enderkisten zijn uitgeschakeld
 
+match.disabled.bed = Bedden zijn uitgeschakeld
 
 match.class.title = Klassen
 
@@ -42,16 +49,19 @@ match.class.notFound = Geen klasse gevonden die overeenkomt met de zoekopdracht.
 # {1} = number of consecutive kills
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats = Gedood\: {0}  | Killstreak\: {1}  | Dood\: {2}  | K/D\: {3}
 
 # {0} = number of kills
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats.concise = Gedood\: {0}  Dood\: {1}  K/D\: {2}
 
 # {0} = number of kills
 # {1} = number of consecutive kills
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Je statistieken\: {0} Gedood ({1}), {2} Dood, {3} K/D, {4} Schade
 
 # {0} = a player name
 # {1} = an amount of kills(number)
@@ -87,9 +97,13 @@ match.class.notFound = Geen klasse gevonden die overeenkomt met de zoekopdracht.
 # {0} the amount of monument pieces broken(number)
 
 # {0} = a player name
+match.stats.team = Statistieken van {0}
 
+match.stats.title = Wedstrijdstatistieken
 
+match.stats.you = Jouw statistieken
 
+match.stats.disabled = Je hebt wedstrijdstatistieken uitgeschakeld
 
 # {0} = team name (e.g. "Red Team")
 match.myTeam = Je bent nu in {0}
@@ -109,9 +123,11 @@ match.alias.err = Er bestaat al een team met de naam {0}.
 
 # {0} = team name (e.g. "Green Team")
 # {1} = max number of players
+match.resize.max = {0} heeft nu een maximale grootte van {1} spelers
 
 # {0} = team name (e.g. "Green Team")
 # {1} = min number of players
+match.resize.min = {0} heeft nu een maximale grootte van {1} spelers
 
 # {0} = duration in colon format (e.g. "13:37" for 13 minutes and 37 seconds left)
 match.timeLimit.generic = De wedstrijd eindigt over {0}
@@ -130,6 +146,7 @@ broadcast.matchStart = De wedstrijd is gestart\!
 
 broadcast.startCancel = Start van de wedstrijd geannuleerd
 
+broadcast.overtime.limit = Als er geen winnaar is na {0}, eindigt de wedstrijd in gelijkspel.
 
 broadcast.gameOver = Wedstrijd voorbij\!
 
@@ -152,6 +169,7 @@ countdown.huddleEnd = De voorbereidingstijd voor je team eindigt over {0}
 # {0} = duration
 countdown.restart = De server start opnieuw op over {0}
 
+admin.reloadConfig = Configuratie is herladen
 
 admin.cancelCountdowns = Alle aftellingen zijn geannuleerd.
 
@@ -179,4 +197,5 @@ admin.start.unknownState = De wedstrijd kan op dit moment niet gestart worden.
 
 admin.end.unknownError = De wedstrijd kan op dit moment niet beëindigd worden.
 
+admin.setPool.activeCycle = Je mag de pool niet aanpassen terwijl de wedstrijd bezig is.
 
