Update Norwegian translations

--- a/util/src/main/i18n/translations/misc_no_NO.properties
+++ b/util/src/main/i18n/translations/misc_no_NO.properties
@@ -153,6 +153,7 @@ misc.right = Høyre
 misc.center = Midterste
 
 
+
 misc.north = Nord
 
 misc.south = Sør
@@ -160,6 +161,24 @@ misc.south = Sør
 misc.east = Øst
 
 misc.west = Vest
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# Pertains to color (e.g. "Light Blue" or "Light Gray")
 
 # {0} = player name
 misc.teleportTo = Teleporter til {0}
@@ -186,6 +205,8 @@ misc.serverFull = Serveren er full, vurder en oppgradering til premium for å ku
 
 misc.serverRestart = Serveren omstartes\!
 
+
+
 type.int = heltall
 
 type.float = desimaltall
@@ -209,6 +230,9 @@ type.uri = url
 type.team = lag
 
 type.settingkey = innstilling
+
+
+
 
 # {0} = a URL (e.g. "https://oc.tc")
 chat.clickLink = Mer info på {0}
