Update German translations

--- a/util/src/main/i18n/translations/ui_de_DE.properties
+++ b/util/src/main/i18n/translations/ui_de_DE.properties
@@ -4,7 +4,7 @@ setting.displayName = Werkzeuge
 
 setting.lore = Rechtsklick, um das Werkzeuge-Menü zu öffnen.
 
-setting.flyspeed = Fluggeschwindigkeit
+setting.flyspeed = Flug-Geschwindigkeit
 
 # {0} = speed type (e.g. "Normal", "Fast", "Faster")
 setting.flyspeed.lore = Aktuelle Geschwindigkeit\: {0}
@@ -55,13 +55,54 @@ setting.options = Mögliche Optionen\: {0}
 # {2} = new setting value (e.g. "on")
 setting.set = Deine {0}-Einstellung wurde von {1} zu {2} geändert
 
+settings.menu.title = Einstellungen
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 preview.noPotionEffects = Keine Trankeffekte
 
 preview.notViewable = Das Inventar des Spielers ist derzeit nicht einsehbar
 
 preview.potionEffects = Trankeffekte
 
-preview.hungerLevel = Hungerlevel
+preview.hungerLevel = Hungerstatus
 
 preview.healthLevel = Gesundheitsstatus
 
@@ -78,7 +119,7 @@ preview.knockbackResistance = Rückstoß-Widerstand ({0}%)
 preview.knockbackReduction = Rückstoß-Reduzierung ({0}%)
 
 # {0} = amount of walking speed (number)
-preview.walkSpeed = Laufgeschwindigkeit ({0}x)
+preview.walkSpeed = Lauf-Geschwindigkeit ({0}x)
 
 preview.closeButton = Schließen
 
@@ -113,3 +154,11 @@ picker.clickToJoin = Du kannst dir dein Team aussuchen, Klick zum Beitreten\!
 picker.clickToRejoin = Klick, um deinem Team erneut beizutreten\!
 
 picker.noPermissions = Premium-Spieler können sich ihr Team aussuchen\!
+
+menu.page.empty = Keine Ergebnisse gefunden\!
+
+menu.page.next = Nächste Seite
+
+menu.page.previous = Vorherige Seite
+
+# {0} = name of previous menu
