Switch locked items to use item tags
Signed-off-by: Pugzy <pugzy@mail.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -28,6 +28,8 @@ match.disabled.enderChest = Ender chests are disabled
 
 match.disabled.bed = Beds are disabled
 
+match.item.locked = This item cannot be removed from its slot
+
 match.class.title = Classes
 
 match.class.current = Current class:
