Update Norwegian translations

--- a/util/src/main/i18n/translations/death_no_NO.properties
+++ b/util/src/main/i18n/translations/death_no_NO.properties
@@ -91,31 +91,34 @@ death.magic.player.mob = {0} ble drept av magien av {1}''s {3}
 death.magic.player.mob.potion = {0} ble drept av en eliksir av {2} fra {1}''s {3}
 
 # {0} = victim player name
-death.squash = {0} ble klemt til døde
+death.squash = {0} ble most
 
 # {0} = victim player name
 # {1} = killer player name
+death.squash.player = {0} ble most av {1}
 
 # {0} = victim player name
 # {2} = entity name (e.g. "Anvil")
-death.squash.entity = {0} ble knust av en fallende {2}
+death.squash.entity = {0} ble most av en fallende {2}
 
 # {0} = victim player name
 # {1} = killer player name
 # {2} = entity name (e.g. "Anvil")
-death.squash.player.entity = {0} ble knust av {1}''s fallende {2}
+death.squash.player.entity = {0} ble most av {1} sin fallende {2}
 
 # {0} = victim player name
 death.suffocate = {0} ble kvalt
 
 # {0} = victim player name
 # {1} = killer player name
+death.suffocate.player = {0} ble kvalt av {1}
 
 # {0} = victim player name
 death.cactus = {0} prøvde å klemme en kaktus
 
 # {0} = victim player name
 # {1} = killer player name
+death.cactus.player = {0} prøvde å klemme {1} sin kaktus
 
 # {0} = victim player name
 # {1} = killer player name
@@ -670,6 +673,12 @@ death.respawn.confirmed.waiting = Du vil gjenoppstå så snart som mulig...
 death.respawn.confirmed.waiting.flagDropped = Du vil gjenoppstå når flagget mistes...
 
 # {0} = A player name
+deathScreen.title.spectator = {0} døde\!
 
+death.respawn.unconfirmed.spectator = De kan venstreklikke for å gjenoppstå
 
+death.respawn.unconfirmed.time.spectator = De kan gjenoppstå om {0}s
 
+death.respawn.confirmed.waiting.spectator = De vil gjenoppstå så snart som mulig...
+
+death.respawn.confirmed.waiting.flagDropped.spectator = De vil gjenoppstå når flagget mistes...
