Update French translations

--- a/util/src/main/i18n/translations/command_fr_FR.properties
+++ b/util/src/main/i18n/translations/command_fr_FR.properties
@@ -81,6 +81,7 @@ command.modesPushedForwards = vers l'avant
 command.modesPushedBack = reculer
 
 # amount of time a mode was pushed (e.g. by 1:00)
+command.modesPushedBy = de
 
 # {0} = mode name (e.g. GOLD, Glass Mode)
 command.selectedModePushed = {0} va commencer dans
