Update Spanish, Chile translations

--- a/util/src/main/i18n/translations/command_es_CL.properties
+++ b/util/src/main/i18n/translations/command_es_CL.properties
@@ -24,6 +24,7 @@ command.onlyPlayers = Debes ser un jugador para ejecutar este comando.
 # {0} = module name (proper noun)
 command.moduleNotFound = El módulo {0} no está en uso esta partida
 
+command.matchNotStarted = La partida debe empezar antes de poder usar este comando.
 
 command.noTeams = No hay equipos en esta partida
 
@@ -67,18 +68,26 @@ command.simplePageHeader = {0} de {1}
 # {1} = total number of pages
 command.invalidPage = No hay página {0}. Éstas van desde la 1 a la {1}.
 
+command.conditionUnmet = Condición no cumplida
 
+command.nextMode = Siguiente modo\:
 
+command.modesPushed = Los modos afectados han sido enviados
 
 # time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
+command.modesPushedForwards = adelante
 
 # time moved backwards (e.g. Affected modes have been pushed back by 2:32)
+command.modesPushedBack = atrás
 
 # amount of time a mode was pushed (e.g. by 1:00)
+command.modesPushedBy = por
 
 # {0} = mode name (e.g. GOLD, Glass Mode)
+command.selectedModePushed = {0} comenzará en
 
 # amount of time remaining (e.g. 1:00 left)
+command.timeLeft = izquierda
 
 # {0} = number of players online
 command.list.online = Conectados\: {0}
