Update Norwegian translations

--- a/util/src/main/i18n/translations/gamemode_no_NO.properties
+++ b/util/src/main/i18n/translations/gamemode_no_NO.properties
@@ -56,6 +56,7 @@ gamemode.arcade.acronym = Arkade
 
 gamemode.ffa.acronym = FFA
 
+gamemode.mixed.acronym = Blandet
 
 objective.name.monument = Monument
 
@@ -67,6 +68,7 @@ objective.name.inhibitor = Inhibitor
 
 objective.name.tower = Tårn
 
+objective.name.pillar = Søyle
 
 objective.name.base = Base
 
@@ -78,7 +80,9 @@ objective.name.reactor = Reaktor
 
 objective.name.engine = Motor
 
+objective.name.flag = Flagg
 
+objective.name.wool = Ull
 
 # {0} = objective mode (e.g. "Gold Core Mode")
 # {1} = time remaining (e.g. "30 seconds")
