Update Dutch translations

--- a/util/src/main/i18n/translations/match_nl_NL.properties
+++ b/util/src/main/i18n/translations/match_nl_NL.properties
@@ -84,6 +84,7 @@ match.stats.own = Je statistieken\: {0} Gedood ({1}), {2} Dood, {3} K/D, {4} Sch
 # {1} = an amount of damage
 
 # {0} = an amount of damage
+# {1} = an amount of damage
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
