Update Korean translations

--- a/util/src/main/i18n/translations/match_ko_KR.properties
+++ b/util/src/main/i18n/translations/match_ko_KR.properties
@@ -91,7 +91,7 @@ match.stats.damage = 딜량\: {1} - {0}
 match.stats.damage.dealt = 원거리 딜량 (활)\: {0}({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = 받은 피해량\: {0}
+# {1} = an amount of damage
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
