Update Russian translations

--- a/util/src/main/i18n/translations/match_ru_RU.properties
+++ b/util/src/main/i18n/translations/match_ru_RU.properties
@@ -91,7 +91,8 @@ match.stats.damage = Урон\: {1} — {0}
 match.stats.damage.dealt = Урона нанесено (Лук)\: {0} ({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = Урона получено\: {0}
+# {1} = an amount of damage
+match.stats.damage.received = Урона получено (Лук)\: {0} ({1})
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
