Update Swedish translations

--- a/util/src/main/i18n/translations/match_sv_SE.properties
+++ b/util/src/main/i18n/translations/match_sv_SE.properties
@@ -91,7 +91,7 @@ match.stats.damage = Skada\: {1} av {0}
 match.stats.damage.dealt = Skada delat (Pilbåge)\: {0} ({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = Skada mottagen\: {0}
+# {1} = an amount of damage
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
