Update LOLCAT translations

--- a/util/src/main/i18n/translations/match_lol_US.properties
+++ b/util/src/main/i18n/translations/match_lol_US.properties
@@ -91,7 +91,7 @@ match.stats.damage = DMG\: {1} BAI {0}
 match.stats.damage.dealt = DMG maekd (Bowz)\: {0} ({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = scratchs recievd\: {0}
+# {1} = an amount of damage
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
