Update Italian translations

--- a/util/src/main/i18n/translations/match_it_IT.properties
+++ b/util/src/main/i18n/translations/match_it_IT.properties
@@ -91,7 +91,7 @@ match.stats.damage = Danno\: {1} di {0}
 match.stats.damage.dealt = Danno (Arco)\: {0} ({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = Danno Ricevuto\: {0}
+# {1} = an amount of damage
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
