--- a/util/src/main/i18n/translations/match_de_DE.properties
+++ b/util/src/main/i18n/translations/match_de_DE.properties
@@ -16,6 +16,7 @@ match.info.score = Punktestand
 
 match.info.you = Du
 # {0} = team name
+match.balanceTeams = Die Teams werden automatisch ausgeglichen, wenn {0} weiterhin zu viele Spieler hat
 
 match.maxBuildHeight = Du hast die maximale Bauhöhe erreicht
 
@@ -60,6 +61,7 @@ match.stats.concise = Getötet\: {0}  Gestorben\: {1}  K/D\: {2}
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 # {4} = an amount of damage
+match.stats.own = Deine Statistiken | Getötet\: {0} ({1}) | Gestorben\: {2}, K/D\: {3} | Schaden\: {4}
 
 # {0} = a player name
 # {1} = an amount of kills(number)
@@ -89,7 +91,8 @@ match.stats.damage = Schaden\: {1} von {0}
 match.stats.damage.dealt = Schaden ausgeteilt (Bogen)\: {0} ({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = Schaden bekommen\: {0}
+# {1} = an amount of damage
+match.stats.damage.received = Schaden erhalten (Bogen)\: {0} ({1})
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
