--- a/util/src/main/i18n/translations/map_no_NO.properties
+++ b/util/src/main/i18n/translations/map_no_NO.properties
@@ -40,6 +40,7 @@ map.info.pools = Samlinger
 
 map.info.objective = Objektiv
 
+map.info.phase = Fase
 
 # {0} = name of a maptag (e.g "#tnt" or "#controlpoint")
 map.info.mapTag.hover = Klikk for å liste alle {0} baner
@@ -75,7 +76,9 @@ map.cycled = Byttet bane
 
 map.protectPortal = Du kan ikke blokkere dette området
 
+map.phase.production = Produksjon
 
+map.phase.development = Utvikling
 
 # {0} = map pool name (e.g. "Mega")
 pool.change = Den aktive banesamlingen er byttet til {0} for å tilpasse banene til antall spillere.
