--- a/util/src/main/i18n/translations/match_es_ES.properties
+++ b/util/src/main/i18n/translations/match_es_ES.properties
@@ -91,7 +91,7 @@ match.stats.damage = Daño\: {1} por {0}
 match.stats.damage.dealt = Daño infligido (Arco)\: {0} ({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = Daño recibido\: {0}
+# {1} = an amount of damage
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
