Update French translations

--- a/util/src/main/i18n/translations/match_fr_FR.properties
+++ b/util/src/main/i18n/translations/match_fr_FR.properties
@@ -91,7 +91,8 @@ match.stats.damage = Dégâts\: {1} par {0}
 match.stats.damage.dealt = Dégâts infligés (Arc)\: {0} ({1})
 
 # {0} = an amount of damage
-match.stats.damage.received = Dégâts reçus\: {0}
+# {1} = an amount of damage
+match.stats.damage.received = Dégâts reçus (Arc)\: {0} ({1})
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
