Update Norwegian translations

--- a/util/src/main/i18n/translations/misc_no_NO.properties
+++ b/util/src/main/i18n/translations/misc_no_NO.properties
@@ -43,20 +43,28 @@ misc.day = {0} dag
 misc.days = {0} dager
 
 # {0} = "1"
+misc.week = {0} uke
 
 # {0} = number of weeks (2-3)
+misc.weeks = {0} uker
 
 # {0} = "1"
+misc.month = {0} måned
 
 # {0} = number of months (2-11)
+misc.months = {0} måneder
 
 # {0} = "1"
+misc.year = {0} år
 
 # {0} = number of years
+misc.years = {0} år
 
 # less than a second
+misc.now = et øyeblikk
 
 # more than 3 years
+misc.eon = lenge
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} siden
@@ -124,7 +132,9 @@ misc.to = Til
 
 misc.from = Fra
 
+misc.nextPage = Neste side
 
+misc.previousPage = Forrige Side
 
 misc.thankYou = Takk.
 
@@ -140,7 +150,7 @@ misc.top = Topp
 
 misc.bottom = Bunn
 
-misc.front = Front
+misc.front = Fremste
 
 misc.back = Bakerste
 
@@ -152,7 +162,9 @@ misc.right = Høyre
 
 misc.center = Midterste
 
+misc.mid = Midterste
 
+misc.middle = Midterste
 
 misc.north = Nord
 
@@ -162,23 +174,40 @@ misc.east = Øst
 
 misc.west = Vest
 
+misc.white = Hvit
 
+misc.orange = Oransje
 
+misc.magenta = Lilla
 
+misc.lightBlue = Lyseblå
 
+misc.yellow = Gul
 
+misc.lime = Lime
 
+misc.pink = Rosa
 
+misc.gray = Grå
 
+misc.lightGray = Lysegrå
 
+misc.cyan = Turkis
 
+misc.purple = Lilla
 
+misc.blue = Blå
 
+misc.brown = Brun
 
+misc.green = Grønn
 
+misc.red = Rød
 
+misc.black = Svart
 
 # Pertains to color (e.g. "Light Blue" or "Light Gray")
+misc.light = Lys
 
 # {0} = player name
 misc.teleportTo = Teleporter til {0}
@@ -205,7 +234,9 @@ misc.serverFull = Serveren er full, vurder en oppgradering til premium for å ku
 
 misc.serverRestart = Serveren omstartes\!
 
+misc.creative = Kreativ
 
+misc.spectator = Tilskuer
 
 type.int = heltall
 
@@ -231,8 +262,11 @@ type.team = lag
 
 type.settingkey = innstilling
 
+type.uuid = uuid
 
+type.localdate = (åååå-mm-dd) dato
 
+type.phase = fase
 
 # {0} = a URL (e.g. "https://oc.tc")
 chat.clickLink = Mer info på {0}
