Update German translations

--- a/util/src/main/i18n/translations/ui_de_DE.properties
+++ b/util/src/main/i18n/translations/ui_de_DE.properties
@@ -57,44 +57,83 @@ setting.set = Deine {0}-Einstellung wurde von {1} zu {2} geändert
 
 settings.menu.title = Einstellungen
 
+settings.menu.lore = Klick, um das Einstellungs-Menü zu öffnen
 
+settings.menu.toggle = Klick, um umzuschalten
 
+settings.chat = Ändert, welcher dein Standard-Chat-Kanal ist
 
+settings.chat.team = Chat-Nachrichten werden nur an dein Team gesendet
 
+settings.chat.global = Chat-Nachrichten werden an alle gesendet
 
+settings.chat.admin = Reserviert für Moderatoren
 
+settings.death = Ändert, welche Art von Todes-Nachrichten angezeigt werden
 
+settings.death.all = Alle Todes-Nachrichten anzeigen
 
+settings.death.own = Nur eigene Todes-Nachrichten anzeigen
 
+settings.picker = Ändert, wann die Team-Auswahl angezeigt wird
 
+settings.picker.auto = Team-Auswahl automatisch anzeigen je nach Spiel
 
+settings.picker.on = Team-Auswahl immer anzeigen
 
+settings.picker.off = Team-Auswahl nie anzeigen
 
+settings.join = Ändert, wann Beitritts-Nachrichten angezeigt werden
 
+settings.join.on = Alle Beitritts-Nachrichten anzeigen
 
+settings.join.off = Alle Beitritts-Nachrichten ausblenden
 
+settings.message = Ändert, ob Privat-Nachrichten akzeptiert werden
 
+settings.message.on = Alle Privat-Nachrichten akzeptieren
 
+settings.message.off = Alle Privat-Nachrichten ablehnen
 
+settings.observers = Ändert, ob Beobachter sichtbar sind
 
+settings.observers.on = Alle Beobachter anzeigen
 
+settings.observers.off = Andere Beobachter verbergen
 
+settings.sounds = Ändert, wann Töne abgespielt werden
 
+settings.sounds.all = Alle Spiel-Töne abspielen
 
+settings.sounds.dm = Nur Töne von Privat-Nachrichten abspielen
 
+settings.sounds.none = Alle Spiel-Töne stummschalten
 
+settings.vote = Ändert, ob das Abstimmungs-Buch vor dem Map-Wechsel angezeigt wird
 
+settings.vote.on = Abstimmungs-Buch immer anzeigen
 
+settings.vote.off = Abstimmungs-Buch nie anzeigen
 
+settings.stats = Ändert, ob Statistiken erstellt werden
 
+settings.stats.on = Spiel-spezifische Statistiken erstellen und anzeigen
 
+settings.stats.off = Spiel-spezifische Statistiken ausschalten und ausblenden
 
+settings.effects = Ändert, ob Partikel-Effekte angezeigt werden
 
+settings.effects.on = Besondere Partikel-Effekte anzeigen
 
+settings.effects.off = Besondere Partikel-Effekte ausblenden
 
+settings.time = Ändert die bevorzugte Tageszeit
 
+settings.time.auto = Tageszeit mit Server synchronisieren
 
+settings.time.dark = Immer Nachtzeit
 
+settings.time.light = Immer Tageszeit
 
 preview.noPotionEffects = Keine Trankeffekte
 
@@ -162,3 +201,4 @@ menu.page.next = Nächste Seite
 menu.page.previous = Vorherige Seite
 
 # {0} = name of previous menu
+menu.page.return = Zurückkehren zu {0}
