Add interactive shops
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -153,6 +153,8 @@ match.timeLimit.result = {1} after {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = The time limit is {0} with the result {1}
 
+match.error.noMatch = There is no match running at this time
+
 broadcast.go = Go!
 
 broadcast.matchStart = The match has started!
