--- a/util/src/main/i18n/templates/ui.properties
+++ b/util/src/main/i18n/templates/ui.properties
@@ -202,3 +202,11 @@ menu.page.previous = Previous Page
 
 # {0} = name of previous menu
 menu.page.return = Return to {0}
+
+shop.currency.insufficient = You do not have enough materials to purchase this item
+
+shop.lore.cost = Cost
+
+shop.lore.purchase = Click to purchase
+
+shop.lore.insufficient = Insufficient materials
