Add support for free items
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/ui.properties
+++ b/util/src/main/i18n/templates/ui.properties
@@ -207,6 +207,8 @@ shop.currency.insufficient = You do not have enough materials to purchase this i
 
 shop.lore.cost = Cost
 
+shop.lore.free = Free
+
 shop.lore.purchase = Click to purchase
 
 shop.lore.insufficient = Insufficient materials
