Add filter support for visibility control
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/ui.properties
+++ b/util/src/main/i18n/templates/ui.properties
@@ -212,3 +212,8 @@ shop.lore.free = Free
 shop.lore.purchase = Click to purchase
 
 shop.lore.insufficient = Insufficient materials
+
+shop.item.empty = No items for sale at the moment
+
+shop.category.empty = This shop has no items for sale at the moment
+
