Add support for customizable EnderChests
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -238,6 +238,8 @@ misc.creative = Creative
 
 misc.spectator = Spectator
 
+misc.chest = Chest
+
 type.int = whole number
 
 type.float = decimal number
