Cleanup filter & region parsing & validation
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -70,6 +70,8 @@ command.invalidPage = There is no page {0}. Pages run from 1 to {1}.
 
 command.conditionUnmet = Condition Unmet
 
+command.monumentModes = Monument Modes
+
 command.nextMode = Next Mode:
 
 command.modesPushed = Affected modes have been pushed
