Cleanup & finish shops
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/util/src/main/i18n/templates/ui.properties
+++ b/util/src/main/i18n/templates/ui.properties
@@ -205,6 +205,8 @@ menu.page.return = Return to {0}
 
 shop.currency.insufficient = You do not have enough materials to purchase this item
 
+shop.purchase.overflow = Purchase could not fit in your inventory, so it's been dropped at your feet
+
 shop.lore.cost = Cost
 
 shop.lore.free = Free
