Update Korean translations

--- a/util/src/main/i18n/translations/death_ko_KR.properties
+++ b/util/src/main/i18n/translations/death_ko_KR.properties
@@ -673,6 +673,12 @@ death.respawn.confirmed.waiting = 가능한 빨리 리스폰 될 것입니다...
 death.respawn.confirmed.waiting.flagDropped = 깃발이 떨어졌을 때 리스폰 될 것입니다...
 
 # {0} = A player name
+deathScreen.title.spectator = {0}이(가) 죽었습니다\!
 
+death.respawn.unconfirmed.spectator = 좌클릭으로 리스폰할 수 있습니다
 
+death.respawn.unconfirmed.time.spectator = {0}초 후 리스폰할 수 있습니다
 
+death.respawn.confirmed.waiting.spectator = 가능한 빨리 리스폰 될 것 입니다...
+
+death.respawn.confirmed.waiting.flagDropped.spectator = 깃발이 떨어졌을 때 리스폰 될 것입니다...
