Update French translations

--- a/util/src/main/i18n/translations/command_fr_FR.properties
+++ b/util/src/main/i18n/translations/command_fr_FR.properties
@@ -70,6 +70,8 @@ command.invalidPage = Il n''existe pas de page {0}. Les numéros des pages vont 
 
 command.conditionUnmet = Condition non satisfaite
 
+command.monumentModes = Modes de Monument
+
 command.nextMode = Prochain mode\:
 
 command.modesPushed = Les modes affectés ont été poussés
