Update German translations

--- a/util/src/main/i18n/translations/command_de_DE.properties
+++ b/util/src/main/i18n/translations/command_de_DE.properties
@@ -70,6 +70,8 @@ command.invalidPage = Es gibt keine Seite {0}. Seiten gehen von 1 bis {1}.
 
 command.conditionUnmet = Bedingung nicht erfüllt
 
+command.monumentModes = Monument-Modi
+
 command.nextMode = Nächster Modus\:
 
 command.modesPushed = Veränderte Modi wurden verschoben
