Update Korean translations

--- a/util/src/main/i18n/translations/command_ko_KR.properties
+++ b/util/src/main/i18n/translations/command_ko_KR.properties
@@ -68,6 +68,8 @@ command.simplePageHeader = {1}중 {0} 페이지
 command.invalidPage = {0} 페이지는 존재하지 않습니다. 페이지는 1부터 {1} 까지입니다.
 
 
+command.monumentModes = 기념비 모드
+
 
 
 # time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
