Update Korean translations

--- a/util/src/main/i18n/translations/gamemode_ko_KR.properties
+++ b/util/src/main/i18n/translations/gamemode_ko_KR.properties
@@ -208,7 +208,7 @@ flag.touch.player = {0}을(를) {1}이(가) 획득했습니다
 flag.touch.you = {0}을(를) 획득했습니다
 
 # {0} = flag name
-flag.drop = {0}가 떨어졌습니다
+flag.drop = {0}이(가) 떨어졌습니다
 
 # {0} = flag name
 # {1} = player name
