Update Korean translations

--- a/util/src/main/i18n/translations/match_ko_KR.properties
+++ b/util/src/main/i18n/translations/match_ko_KR.properties
@@ -88,7 +88,7 @@ match.stats.damage = 딜량\: {1} - {0}
 
 # {0} = an amount of damage
 # {1} = an amount of damage
-match.stats.damage.dealt = 원거리 딜량 (활)\: {0}({1})
+match.stats.damage.dealt = 입힌 피해량(활)\: {0} ({1})
 
 # {0} = an amount of damage
 # {1} = an amount of damage
@@ -151,6 +151,7 @@ match.timeLimit.result = {0} 후 {1}
 # {0} = duration in colon format
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = {1}에서 시간제한은 {0}입니다.
+
 
 broadcast.go = 시작\!
 
