Update Russian translations

--- a/util/src/main/i18n/translations/match_ru_RU.properties
+++ b/util/src/main/i18n/translations/match_ru_RU.properties
@@ -153,6 +153,8 @@ match.timeLimit.result = {1} через {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = {1} через {0}
 
+match.error.noMatch = На данный момент нет активных матчей
+
 broadcast.go = Старт\!
 
 broadcast.matchStart = Матч начался\!
