Update French translations

--- a/util/src/main/i18n/translations/match_fr_FR.properties
+++ b/util/src/main/i18n/translations/match_fr_FR.properties
@@ -153,6 +153,8 @@ match.timeLimit.result = {1} après {0}
 # {1} = some criteria to win the match
 match.timeLimit.commandOutput = Le délai est de {0} avec {1} comme résultat
 
+match.error.noMatch = Il n'y a pas de match en cours en ce moment
+
 broadcast.go = En avant \!
 
 broadcast.matchStart = Le match a commencé \!
