Update Russian translations

--- a/util/src/main/i18n/translations/ui_ru_RU.properties
+++ b/util/src/main/i18n/translations/ui_ru_RU.properties
@@ -202,3 +202,20 @@ menu.page.previous = Пред. страница
 
 # {0} = name of previous menu
 menu.page.return = Вернуться в {0}
+
+shop.currency.insufficient = У вас недостаточно материалов для покупки этого предмета
+
+shop.purchase.overflow = Покупка не поместилась в ваш инвентарь, отчего была выброшена рядом с вами
+
+shop.lore.cost = Цена
+
+shop.lore.free = Бесплатно
+
+shop.lore.purchase = Нажмите для покупки
+
+shop.lore.insufficient = Недостаточно материалов
+
+shop.item.empty = Нет предметов для продажи
+
+shop.category.empty = На данный момент в этом магазине нет товаров для продажи
+
