Update Korean translations

--- a/util/src/main/i18n/translations/ui_ko_KR.properties
+++ b/util/src/main/i18n/translations/ui_ko_KR.properties
@@ -45,7 +45,7 @@ setting.observersOnly = 죄송합니다, 이 명령어는 관전자만 사용할
 
 # {0} = name of a setting (e.g. "chat", "sounds", "picker")
 # {1} = current setting value (e.g. "on", "off")
-setting.get = 당신의 {0} 설정이 {1}(으)로 설정되었습니다
+setting.get = {0} 설정이 {1}(으)로 설정되어 있습니다.
 
 # {0} = list of setting values (e.g "on, off")
 setting.options = 가능한 옵션\: {0}
@@ -53,7 +53,22 @@ setting.options = 가능한 옵션\: {0}
 # {0} = name of a setting
 # {1} = old setting value (e.g. "off")
 # {2} = new setting value (e.g. "on")
-setting.set = 당신의 {0} 설정을 {1}에서 {2}(으)로 변경했습니다
+setting.set = {0} 설정을 {1}에서 {2}(으)로 변경했습니다.
+
+settings.menu.title = 설정
+
+settings.menu.lore = 설정 메뉴를 열려면 클릭하세요
+
+settings.menu.toggle = 클릭하여 바꾸기
+
+
+
+
+
+
+settings.death.all = 모든 사망 메시지 보기
+
+settings.death.own = 자기 자신의 사망 메시지만 보기
 
 
 
@@ -83,17 +98,9 @@ setting.set = 당신의 {0} 설정을 {1}에서 {2}(으)로 변경했습니다
 
 
 
+settings.time.dark = 항상 밤
 
-
-
-
-
-
-
-
-
-
-
+settings.time.light = 항상 낮
 
 preview.noPotionEffects = 포션 효과가 없습니다
 
@@ -150,11 +157,24 @@ picker.capacity = 팀이 다 차서 입장할 수 없습니다.
 
 picker.clickToJoin = 팀을 선택할 수 있습니다, 클릭해서 입장하세요\!
 
-picker.clickToRejoin = 당신의 팀에 재참여를 위해 클릭하세요\!
+picker.clickToRejoin = 팀에 재참여를 위해 클릭하세요\!
 
 picker.noPermissions = 프리미엄 유저는 팀을 선택할 수 있습니다.
 
+menu.page.empty = 검색 결과가 없습니다\!
 
+menu.page.next = 다음 페이지
 
+menu.page.previous = 이전 페이지
 
 # {0} = name of previous menu
+menu.page.return = {0}(으)로 돌아가기
+
+
+
+
+
+
+
+
+
