Update French translations

--- a/util/src/main/i18n/translations/ui_fr_FR.properties
+++ b/util/src/main/i18n/translations/ui_fr_FR.properties
@@ -202,3 +202,20 @@ menu.page.previous = Page précédente
 
 # {0} = name of previous menu
 menu.page.return = Retour à {0}
+
+shop.currency.insufficient = Vous n'avez pas assez de matériaux pour acheter cet item
+
+shop.purchase.overflow = L'achat n'a pas pu entrer dans votre inventaire, il a donc été déposé à vos pieds
+
+shop.lore.cost = Prix
+
+shop.lore.free = Gratuit
+
+shop.lore.purchase = Cliquer pour acheter
+
+shop.lore.insufficient = Matériaux insuffisants
+
+shop.item.empty = Aucun item en vente pour le moment
+
+shop.category.empty = Cette boutique n'a pas d'items à vendre pour le moment
+
