Add translatables for Skywars
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/gamemode.properties
+++ b/util/src/main/i18n/templates/gamemode.properties
@@ -30,6 +30,8 @@ gamemode.rfw.name = Race for Wool
 
 gamemode.scorebox.name = Scorebox
 
+gamemode.skywars.name = Skywars
+
 gamemode.arcade.name = Arcade
 
 gamemode.ffa.name = Free for All
@@ -67,6 +69,8 @@ gamemode.br.acronym = Blitz: Rage
 gamemode.rfw.acronym = RFW
 
 gamemode.scorebox.acronym = Scorebox
+
+gamemode.skywars.acronym = Skywars
 
 gamemode.arcade.acronym = Arcade
 
