Add Payload gamemode translatable
Signed-off-by: Patrick <cowinkkeydinkinc@gmail.com>

--- a/util/src/main/i18n/templates/gamemode.properties
+++ b/util/src/main/i18n/templates/gamemode.properties
@@ -20,6 +20,8 @@ gamemode.cp.name = Control the Point
 
 gamemode.koth.name = King of the Hill
 
+gamemode.pd.name = Payload
+
 gamemode.blitz.name = Blitz
 
 gamemode.rage.name = Rage
@@ -59,6 +61,8 @@ gamemode.ad.acronym = A/D
 gamemode.cp.acronym = CP
 
 gamemode.koth.acronym = KotH
+
+gamemode.pd.acronym = PD
 
 gamemode.blitz.acronym = Blitz
 
