Cleanup & fixup many, many cloud framework issues
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -15,6 +15,10 @@ command.invalidNumber = Invalid number '{0}'
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Usage: {0}
 
+command.alternativeUsage = You may try {0} instead
+
+command.clickToRun = Click to run {0}
+
 command.unknownError.user = An unknown error occurred. Please notify an administrator.
 
 command.unknownError.staff = An unknown error has occurred. Please refer to the server console.
