--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -260,6 +260,10 @@ type.uri = url
 
 type.team = team
 
+type.playerclass = class
+
+type.mode = mode
+
 type.settingkey = setting
 
 type.uuid = uuid
