Multiple winner support in FFA tie
Signed-off-by: KingSimon <19822231+KingOfSquares@users.noreply.github.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -178,6 +178,9 @@ broadcast.gameOver.teamWinner = {0} wins!
 # {0} = winning team name (e.g. plural names, "Attackers" or "Defenders")
 broadcast.gameOver.teamWinners = {0} win!
 
+# {0} = the amount of winners, always a number (e.g. "5 winners")
+broadcast.gameOver.winners = {0} winners!
+
 # {0} = duration (e.g. "30 seconds")
 countdown.matchStart = Match starting in {0}
 
