Support Community * Added Integrations and other ways allowing third-party plugins to interact with PGM
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -132,6 +132,12 @@ misc.to = To
 
 misc.from = From
 
+misc.all = All
+
+misc.none = None
+
+misc.friends = Friends
+
 misc.nextPage = Next Page
 
 misc.previousPage = Previous Page
