Changes based on feedback
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -111,7 +111,7 @@ command.message.blocked = {0} is not accepting messages at this time.
 # {0} = map name
 command.maps.hover = Click to view {0}
 
-command.noResults = No results match!
+command.noResults = No results found!
 
 # {0} = player name
 command.message.friendsOnly = You must be friends with {0} to message them
