--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -52,6 +52,8 @@ moderation.mute.list = Muted Players
 
 moderation.mute.none = There are no muted players online!
 
+moderation.mute.noReason = No reason provided
+
 # {0} = player name
 moderation.mute.hover = Click to unmute {0}
 
