--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -110,3 +110,12 @@ command.message.blocked = {0} is not accepting messages at this time.
 
 # {0} = map name
 command.maps.hover = Click to view {0}
+
+command.noResults = No results found!
+
+# {0} = player name
+command.message.friendsOnly = You must be friends with {0} to message them
+
+# {0} = command name
+command.message.disabled = You are unable to send messages, use {0} to change
+
