Update Romanian translations

--- a/util/src/main/i18n/translations/command_ro_RO.properties
+++ b/util/src/main/i18n/translations/command_ro_RO.properties
@@ -15,6 +15,8 @@ command.invalidNumber = ''{0}'' este un număr nevalid
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Utilizare\: {0}
 
+
+
 command.unknownError.user = A apărut o eroare necunoscută. Te rugăm să anunţi un administrator.
 
 command.unknownError.staff = A apărut o eroare necunoscută. Te rugăm să consulţi consola serverului.
@@ -96,3 +98,9 @@ command.message.blocked = {0} nu acceptă mesaje momentan.
 
 # {0} = map name
 command.maps.hover = Fă clic pentru a vedea {0}
+
+
+# {0} = player name
+
+# {0} = command name
+
