Update French translations

--- a/util/src/main/i18n/translations/command_fr_FR.properties
+++ b/util/src/main/i18n/translations/command_fr_FR.properties
@@ -15,6 +15,10 @@ command.invalidNumber = Nombre invalide ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Usage \: {0}
 
+command.alternativeUsage = Vous pouvez essayer {0} à la place
+
+command.clickToRun = Cliquez pour exécuter {0}
+
 command.unknownError.user = Une erreur inconnue s'est produite. Veuillez avertir un administrateur.
 
 command.unknownError.staff = Une erreur inconnue s'est produite. Veuillez vous référer à la console du serveur.
@@ -106,3 +110,12 @@ command.message.blocked = {0} n''accepte actuellement pas de messages.
 
 # {0} = map name
 command.maps.hover = Cliquez pour voir {0}
+
+command.noResults = Aucun résultat trouvé \!
+
+# {0} = player name
+command.message.friendsOnly = Vous devez être amis avec {0} pour leur envoyer un message
+
+# {0} = command name
+command.message.disabled = Vous ne pouvez pas envoyer de messages, utilisez {0} pour changer
+
