--- a/util/src/main/i18n/translations/command_es_ES.properties
+++ b/util/src/main/i18n/translations/command_es_ES.properties
@@ -15,6 +15,8 @@ command.invalidNumber = Número inválido ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Uso\: {0}
 
+
+
 command.unknownError.user = Ha ocurrido un error desconocido. Por favor notifíquelo a un administrador.
 
 command.unknownError.staff = Se ha producido un error desconocido. Por favor consulte la consola del servidor.
@@ -24,6 +26,7 @@ command.onlyPlayers = Debes ser un jugador para usar este comando.
 # {0} = module name (proper noun)
 command.moduleNotFound = El módulo {0} no está en uso en esta partida
 
+command.matchNotStarted = La partida debe comenzar antes de usar este comando.
 
 command.noTeams = Los equipos no están en uso en esta partida
 
@@ -67,19 +70,28 @@ command.simplePageHeader = {0} de {1}
 # {1} = total number of pages
 command.invalidPage = No hay página {0}. Las páginas van de 1 a {1}.
 
+command.conditionUnmet = Condición no cumplida
 
+command.monumentModes = Modos de monumento
 
+command.nextMode = Siguiente modo\:
 
+command.modesPushed = Los modos afectados han sido apresurados
 
 # time moved ahead (e.g. Affected modes have been pushed forwards by 2:32)
+command.modesPushedForwards = adelante
 
 # time moved backwards (e.g. Affected modes have been pushed back by 2:32)
+command.modesPushedBack = atrás
 
 # amount of time a mode was pushed (e.g. by 1:00)
+command.modesPushedBy = por
 
 # {0} = mode name (e.g. GOLD, Glass Mode)
+command.selectedModePushed = {0} empezará en
 
 # amount of time remaining (e.g. 1:00 left)
+command.timeLeft = restante
 
 # {0} = number of players online
 command.list.online = Jugadores en línea\: {0}
@@ -96,3 +108,9 @@ command.message.blocked = {0} no acepta mensajes en este momento.
 
 # {0} = map name
 command.maps.hover = Clic para más info. de {0}
+
+
+# {0} = player name
+
+# {0} = command name
+
