Update Afrikaans translations

--- a/util/src/main/i18n/translations/command_af_ZA.properties
+++ b/util/src/main/i18n/translations/command_af_ZA.properties
@@ -14,6 +14,8 @@ command.invalidNumber = Ongeldig nommer ''{0}''
 # {0} = command usage (e.g. "/restart [seconds]")
 command.incorrectUsage = Gebruik\: {0}
 
+
+
 command.unknownError.user = 'N onbekende fout plaasgevind. Asseblief 'n administrateur in kennis stel.
 
 command.unknownError.staff = 'N onbekende fout voorgekom het. Verwys asseblief na die bediener konsole.
@@ -88,3 +90,9 @@ command.invalidPage = Daar bestaan geen bladsy {0}. bladsye hardloop van 1 tot {
 # {0} = player name
 
 # {0} = map name
+
+
+# {0} = player name
+
+# {0} = command name
+
